--- a/_library/152_Pichert_2008.md
+++ b/_library/152_Pichert_2008.md
@@ -1,5 +1,5 @@
 ---
-title: Green Defaults: Information Presentation and Pro-Environmental Behaviour
+title: Green Defaults-Information Presentation and Pro-Environmental Behaviour
 permalink: /Pichert-defaults-2008/
 tags: library 
 year: 2008
