Update and rename 15_Hunt_2011.txt to 15_Hunt_2011.md

--- a/_library/15_Hunt_2011.md
+++ b/_library/15_Hunt_2011.md
@@ -1,5 +1,5 @@
 ---
-title: Social norms and energy conservation
+title: Social Norms and Energy Conservation
 permalink: /hunt-norms-energy-2011/
 tags: library 
 year: 2011
@@ -35,7 +35,7 @@ behavior: the effect is equivalent to that of a short-run electricity price incr
 effectiveness compares favorably to that of traditional energy conservation programs. Perhaps because the
 treatment included descriptive social norms, effects are heterogeneous: households in the highest decile of
 pre-treatment consumption decrease usage by 6.3%, while consumption by the lowest decile decreases by
-only 0.3%. A regression discontinuity design shows that different categories of ìinjunctive normsî played an
+only 0.3%. A regression discontinuity design shows that different categories of ‚Äúinjunctive norms‚Äù played an
 insignificant role in encouraging relatively low users not to increase usage.
 
 ## Author(s)
