Update and rename 162_dewit_2008.txt to 162_dewit_2008.md

--- a/_library/162_dewit_2008.md
+++ b/_library/162_dewit_2008.md
@@ -1,5 +1,5 @@
 ---
-title: What Works Best: Objective Statistics or a Personal Testimonial? An Assessment of the Persuasive Effects of Different Types of Message Evidence on Risk Perception
+title: What Works Best-Objective Statistics or a Personal Testimonial? An Assessment of the Persuasive Effects of Different Types of Message Evidence on Risk Perception
 permalink: /dewit-messager-2008/
 tags: library 
 year: 2008
@@ -34,7 +34,7 @@ personal account), statistical evidence (i.e., abstract prevalence data), mere a
 and no risk information. 
 
 Main Outcome Measures: Narrative evidence was expected to more effective
-than statistical evidence in increasing MSM’s perceived risk of infection with HBV an intention to obtain
+than statistical evidence in increasing MSMâ€™s perceived risk of infection with HBV an intention to obtain
 vaccination. 
 
 Results and Conclusion: As predicted, perceptions of personal risk and intention to obtain
