Update and rename 163_Handel_2013.txt to 163_Handel_2013.md

--- a/_library/163_Handel_2013.md
+++ b/_library/163_Handel_2013.md
@@ -1,5 +1,5 @@
 ---
-title: Adverse Selection and Inertia in Health Insurance Markets: When Nudging Hurts
+title: Adverse Selection and Inertia in Health Insurance Markets-When Nudging Hurts
 permalink: /handel-inertia-2013/
 tags: library 
 year: 2013
