--- a/_library/164_Meeker_2016.md
+++ b/_library/164_Meeker_2016.md
@@ -1,5 +1,5 @@
 ---
-title: Effect of Behavioral Interventions on Inappropriate Antibiotic Prescribing among Primary Care Practices: A Randomized Clinical Trial
+title: Effect of Behavioral Interventions on Inappropriate Antibiotic Prescribing among Primary Care Practices-A Randomized Clinical Trial
 permalink: /template/
 tags: library 
 year: 2016
@@ -39,14 +39,14 @@ November 1, 2011, and October 1, 2012. Follow-up for the latest-starting sites e
 INTERVENTIONS: Three behavioral interventions, implemented alone or in combination:
 suggested alternatives presented electronic order sets suggesting nonantibiotic treatments;
 accountable justification prompted clinicians to enter free-text justifications for prescribing
-antibiotics into patientsí electronic health records; peer comparison sent emails to clinicians
-that compared their antibiotic prescribing rates with those of ìtop performersî (those with
+antibiotics into patients‚Äô electronic health records; peer comparison sent emails to clinicians
+that compared their antibiotic prescribing rates with those of ‚Äútop performers‚Äù (those with
 the lowest inappropriate prescribing rates).
 
 MAIN OUTCOMES AND MEASURES: Antibiotic prescribing rates for visits with
 antibiotic-inappropriate diagnoses (nonspecific upper respiratory tract infections, acute
 bronchitis, and influenza) from 18 months preintervention to 18 months afterward, adjusting
-each interventionís effects for co-occurring interventions and preintervention trends, with
+each intervention‚Äôs effects for co-occurring interventions and preintervention trends, with
 random effects for practices and clinicians.
 
 RESULTS: There were 14,753 visits (mean patient age, 47 years; 69% women) for
