--- a/_library/165_Handel_2015.md
+++ b/_library/165_Handel_2015.md
@@ -1,5 +1,5 @@
 ---
-title: Health Insurance for ‘Humans’: Information Frictions, Plan Choice, and Consumer Welfare
+title: Health Insurance for â€˜Humans'-Information Frictions, Plan Choice, and Consumer Welfare
 permalink: /handel-choice-2015/
 tags: library 
 year: 2015
@@ -45,4 +45,4 @@ Data Analysis, Survey Research
 
 ## Source
 
-<a href="http://faculty.haas.berkeley.edu/jkolstad/HIFH_HandelKolstad.pdf">Health Insurance for ‘Humans’: Information Frictions, Plan Choice, and Consumer Welfare</a>
+<a href="http://faculty.haas.berkeley.edu/jkolstad/HIFH_HandelKolstad.pdf">Health Insurance for â€˜Humansâ€™: Information Frictions, Plan Choice, and Consumer Welfare</a>
