--- a/_library/167_Johnson_2013.md
+++ b/_library/167_Johnson_2013.md
@@ -34,7 +34,7 @@ significant room for improvement. Without interventions, respondents perform at 
 levels and show a significant bias, overweighting out-of-pocket expenses and deductibles.
 Financial incentives do not improve performance, and decision-makers do not realize that they
 are performing poorly. However, performance can be improved quite markedly by providing
-calculation aids, and by choosing a ìsmartî default. Implementing these psychologically-based
+calculation aids, and by choosing a ‚Äúsmart‚Äù default. Implementing these psychologically-based
 principles could save purchasers of policies and taxpayers approximately 10 billion dollars every
 year.
 
