--- a/_library/171_Davey_2016.md
+++ b/_library/171_Davey_2016.md
@@ -23,10 +23,10 @@ domain:
 ## Abstract Summary
 
 Objective: We evaluated whether regular mobile phone text
-reminders improved patients’ retention in antiretroviral therapy
+reminders improved patientsâ€™ retention in antiretroviral therapy
 (ART) care in Mozambique.
 
-Design: SMSaúde was a randomized control trial of HIV-infected
+Design: SMSaÃºde was a randomized control trial of HIV-infected
 patients on ART who received regular text message reminder vs.
 standard of care at 3 public health facilities in Maputo Province,
 Mozambique. The primary outcome was retention in HIV care.
@@ -34,7 +34,7 @@ Between November 2011 and March 2012, 830 eligible HIVinfected
 patients on ART were randomized 1:1 to the text reminder
 intervention or standard of care.
 
-Methods: We used Kaplan–Meier estimators and log-rank tests to
+Methods: We used Kaplanâ€“Meier estimators and log-rank tests to
 compare proportions of patients who received SMS reminders who were
 retained in HIV care compared to the control group who received
 standard of care. Post hoc analyses were performed using Cox
@@ -59,7 +59,7 @@ reminders compared with standard of care.
 
 ## Author(s)
 
-Dvora Joseph Davey, MPH, PhD, José António Nhavoto, PhD,
+Dvora Joseph Davey, MPH, PhD, JosÃ© AntÃ³nio Nhavoto, PhD,
 Orvalho Augusto, MD, Walter Ponce, MPH, Daila Traca, MSc,
 Alexandre Nguimfack, MD, and Cesar Palha de Sousa, MD, PhD
 
