--- a/_library/171_Davey_2016.md
+++ b/_library/171_Davey_2016.md
@@ -1,5 +1,5 @@
 ---
-title: SMSaude: Evaluating Mobile Phone Text Reminders to Improve Retention in HIV Care for Patients on Antiretroviral Therapy in Mozambique
+title: SMSaude-Evaluating Mobile Phone Text Reminders to Improve Retention in HIV Care for Patients on Antiretroviral Therapy in Mozambique
 permalink: /Davey-text-reminder-2016/
 tags: library 
 year: 2016
