Update and rename 175_Yeager_2011.txt to 175_Yeager_2011.md

--- a/_library/175_Yeager_2011.md
+++ b/_library/175_Yeager_2011.md
@@ -1,5 +1,5 @@
 ---
-title: Social-Psychological Interventions in Education: Theyíre Not Magic
+title: Social-Psychological Interventions in Education-They‚Äôre Not Magic
 permalink: /yeager-education-2011/
 tags: library 
 year: 2011
@@ -26,20 +26,20 @@ domain:
 ---
 ## Abstract Summary
 
-Recent randomized experiments have found that seemingly ìsmallî socialpsychological
-interventions in educationóthat is, brief exercises that target
-studentsí thoughts, feelings, and beliefs in and about schoolócan lead to
+Recent randomized experiments have found that seemingly ‚Äúsmall‚Äù socialpsychological
+interventions in education‚Äîthat is, brief exercises that target
+students‚Äô thoughts, feelings, and beliefs in and about school‚Äîcan lead to
 large gains in student achievement and sharply reduce achievement gaps
 even months and years later. These interventions do not teach students academic
-content but instead target studentsí psychology, such as their beliefs
+content but instead target students‚Äô psychology, such as their beliefs
 that they have the potential to improve their intelligence or that they belong
 and are valued in school. When social-psychological interventions have lasting
-effects, it can seem surprising and even ìmagical,î leading people either
+effects, it can seem surprising and even ‚Äúmagical,‚Äù leading people either
 to think of them as quick fixes to complicated problems or to consider them
 unworthy of serious consideration. The present article discourages both
 responses. It reviews the theoretical basis of several prominent social-psychological
 interventions and emphasizes that they have lasting effects
-because they target studentsí subjective experiences in school, because they
+because they target students‚Äô subjective experiences in school, because they
 use persuasive yet stealthy methods for conveying psychological ideas, and
 because they tap into recursive processes present in educational environments.
 By understanding psychological interventions as powerful but context-
@@ -57,4 +57,4 @@ Review
 
 ## Source
 
-<a href="https://oig.hhs.gov/oei/reports/oei-02-09-00600.pdf">Social-Psychological Interventions in Education: Theyíre Not Magic</a>
+<a href="https://oig.hhs.gov/oei/reports/oei-02-09-00600.pdf">Social-Psychological Interventions in Education: They‚Äôre Not Magic</a>
