--- a/_library/177_Walton_2011.md
+++ b/_library/177_Walton_2011.md
@@ -22,18 +22,18 @@ domain:
 ---
 ## Abstract Summary
 
-A brief intervention aimed at buttressing college freshmen’s sense of social belonging in school was
+A brief intervention aimed at buttressing college freshmenâ€™s sense of social belonging in school was
 tested in a randomized controlled trial (N = 92), and its academic and health-related consequences over
 3 years are reported. The intervention aimed to lessen psychological perceptions of threat on campus
 by framing social adversity as common and transient. It used subtle attitude-change strategies to lead
 participants to self-generate the intervention message. The intervention was expected to be particularly
 beneficial to African-American students (N = 49), a stereotyped and socially marginalized group in
 academics, and less so to European-American students (N = 43). Consistent with these expectations,
-over the 3-year observation period the intervention raised African Americans’ grade-point average (GPA)
+over the 3-year observation period the intervention raised African Americansâ€™ grade-point average (GPA)
 relative to multiple control groups and halved the minority achievement gap. This performance boost
 was mediated by the effect of the intervention on subjective construal: It prevented students from
 seeing adversity on campus as an indictment of their belonging. Additionally, the intervention
-improved African Americans’ self-reported health and well-being and reduced their reported number
+improved African Americansâ€™ self-reported health and well-being and reduced their reported number
 of doctor visits 3 years postintervention. Senior-year surveys indicated no awareness among participants
 of the intervention's impact. The results suggest that social belonging is a psychological lever where
 targeted intervention can have broad consequences that lessen inequalities in achievement and health.
