Update and rename 22_Rogers_2015.txt to 22_Rogers_2015.md

--- a/_library/22_Rogers_2015.md
+++ b/_library/22_Rogers_2015.md
@@ -1,5 +1,5 @@
 ---
-title: Making the Best Laid Plans Better: How Plan-Making Increases Follow-Through
+title: Making the Best Laid Plans Better-How Plan-Making Increases Follow-Through
 permalink: /rogers-planmaking-2015/
 tags: library 
 year: 2015
@@ -26,11 +26,11 @@ domain:
 
 Many intend to stay fit but fail to exercise or eat healthfully; students intend to earn good grades
 but study too little; citizens intend to vote but fail to turnout. How can policy-makers help
-people follow through on their intentions? Prompting people to make plans – an intervention
-grounded in behavioral science research – leverages the mechanical benefits of advance
+people follow through on their intentions? Prompting people to make plans â€“ an intervention
+grounded in behavioral science research â€“ leverages the mechanical benefits of advance
 scheduling and a range of advantageous cognitive processes to increase follow-through. We
 review laboratory and field experiments which reveal that prompting the formation of specific
-implementation plans increases follow-through across a range of domains – from vaccinations to
+implementation plans increases follow-through across a range of domains â€“ from vaccinations to
 voting. Plan-making prompts are a simple, inexpensive, and powerful tool for helping people
 follow through on their intentions while preserving their autonomy. 
 
