--- a/_library/23_HHS_2012.md
+++ b/_library/23_HHS_2012.md
@@ -38,7 +38,7 @@ Retail pharmacies each billed Part D an average of nearly $1 million for prescri
 
 WHAT WE RECOMMEND
 
-Together, the findings of this report and prior OIG reports call for a strong response to improve Part D oversight. Therefore, we recommend that CMS: (1) strengthen the Medicare Drug Integrity Contractor’s monitoring of pharmacies and ability to identify pharmacies for further review, (2) provide additional guidance to sponsors on monitoring pharmacy billing, (3) require sponsors to refer potential fraud and abuse incidents that may warrant further investigation, (4) develop risk scores for pharmacies, (5) further strengthen its compliance plan audits, and (6) follow up on the pharmacies identified as having questionable billing. CMS concurred with four of the recommendations and partially concurred with the other two.
+Together, the findings of this report and prior OIG reports call for a strong response to improve Part D oversight. Therefore, we recommend that CMS: (1) strengthen the Medicare Drug Integrity Contractorâ€™s monitoring of pharmacies and ability to identify pharmacies for further review, (2) provide additional guidance to sponsors on monitoring pharmacy billing, (3) require sponsors to refer potential fraud and abuse incidents that may warrant further investigation, (4) develop risk scores for pharmacies, (5) further strengthen its compliance plan audits, and (6) follow up on the pharmacies identified as having questionable billing. CMS concurred with four of the recommendations and partially concurred with the other two.
 
 ## Author(s)
 
