--- a/_library/31_Karlan_2014.md
+++ b/_library/31_Karlan_2014.md
@@ -24,12 +24,12 @@ domain:
 ---
 ## Abstract Summary
 
-We provide evidence from eld experiments with three dierent banks, that
+We provide evidence from field experiments with three different banks, that
 reminder messages increase commitment attainment for clients who recently opened commitment
-savings accounts. Messages that mention both savings goals and nancial incentives are par-
-ticularly eective, while other content variations such as gain versus loss framing do not have
-signicantly dierent eects. Nor do we nd evidence that receiving additional late reminders has
-an additive eect. These empirical results do not map neatly into existing models, so we provide
+savings accounts. Messages that mention both savings goals and finnancial incentives are par-
+ticularly effective, while other content variations such as gain versus loss framing do not have
+significantly different effects. Nor do we find evidence that receiving additional late reminders has
+an additive effect. These empirical results do not map neatly into existing models, so we provide
 a simple model where limited attention to exceptional expenses can generate under-saving that
 is in turn mitigated by reminders.
 
