Update and rename 33_Baird_2015.txt to 33_Baird_2015.md

--- a/_library/33_Baird_2015.md
+++ b/_library/33_Baird_2015.md
@@ -1,5 +1,5 @@
 ---
-title: REMINDERS TO PAY: Using Behavioral Economics to Increase Child Support Payments
+title: REMINDERS TO PAY-Using Behavioral Economics to Increase Child Support Payments
 permalink: /baird-reminders-2015/
 tags: library 
 year: 2015
@@ -51,8 +51,8 @@ parents to whom payment reminder notices were not being sent. The second
 test targeted parents who were already being mailed monthly payment reminder
 notices. This second test compared the effectiveness of a new payment reminder
 notice that incorporated behavioral principles with the current payment reminder
-notice being sent by Ohio’s Child Support Payment Central (CSPC) — the
-state’s payment processing center.
+notice being sent by Ohioâ€™s Child Support Payment Central (CSPC) â€” the
+stateâ€™s payment processing center.
 
 The first test found that reminders produced a modest but statistically significant
 increase of 2.9 percentage points in the number of parents who made at
@@ -65,7 +65,7 @@ reminder notice and current CSPC payment reminder performed comparably,
 and no statistically significant differences in the number of parents paying or the
 dollar amount of payments were found. The findings reviewed in this report are
 consistent with the existing behavioral science literature, which demonstrates
-that reminders can influence people’s actions. However, the modest findings
+that reminders can influence peopleâ€™s actions. However, the modest findings
 suggest that the targeted noncustodial parents may have a limited ability to pay,
 or that the behavioral bottlenecks they face were not adequately addressed by
 the interventions.
