Update and rename 5_Dai_2014.txt to 5_Dai_2014.md

--- a/_library/5_Dai_2014.md
+++ b/_library/5_Dai_2014.md
@@ -1,5 +1,5 @@
 ---
-title: The Fresh Start Effect: Temporal Landmarks Motivate
+title: The Fresh Start Effect--Temporal Landmarks Motivate
 Aspirational Behavior
 permalink: /Dai-2014-Fresh-start/
 tags: library 
@@ -23,10 +23,10 @@ domain:
 ---
 ## Abstract Summary
 
-The popularity of New Yearís resolutions suggests that people are more likely to tackle their goals immediately
+The popularity of New Year‚Äôs resolutions suggests that people are more likely to tackle their goals immediately
 following salient temporal landmarks. If true, this little-researched phenomenon has the potential to help
 people overcome important willpower problems that often limit goal attainment. Across three archival field studies,
-we provide evidence of a ìfresh start effect.î We show that Google searches for the term ìdietî (Study 1), gym
+we provide evidence of a ‚Äúfresh start effect.‚Äù We show that Google searches for the term ‚Äúdiet‚Äù (Study 1), gym
 visits (Study 2), and commitments to pursue goals (Study 3) all increase following temporal landmarks (e.g., the
 outset of a new week, month, year, or semester; a birthday; a holiday). We propose that these landmarks demarcate
 the passage of time, creating many new mental accounting periods each year, which relegate past imperfections to
