--- a/_library/5_Dai_2014.md
+++ b/_library/5_Dai_2014.md
@@ -1,5 +1,5 @@
 ---
-title: The Fresh Start Effect--Temporal Landmarks Motivate
+title: The Fresh Start Effect-Temporal Landmarks Motivate
 Aspirational Behavior
 permalink: /Dai-2014-Fresh-start/
 tags: library 
