--- a/_library/162_dewit_2008.md
+++ b/_library/162_dewit_2008.md
@@ -1,5 +1,5 @@
 ---
-title: What Works Best-Objective Statistics or a Personal Testimonial? An Assessment of the Persuasive Effects of Different Types of Message Evidence on Risk Perception
+title: What Works Best--Objective Statistics or a Personal Testimonial?
 permalink: /dewit-messager-2008/
 tags: library 
 year: 2008
