--- a/_library/162_dewit_2008.md
+++ b/_library/162_dewit_2008.md
@@ -21,10 +21,6 @@ domain:
 ---
 ## Abstract Summary
 
-[Paste in from abstract]
-
-## Author(s)
-
 Objective: In an experimental online study we compared the effects of different types of persuasive
 evidence in promoting the acceptance of a personal health risk. 
 
@@ -42,6 +38,10 @@ vaccination against HBV were highest after presentation of narrative evidence, a
 the effect of type of message evidence on intention. We propose that narrative evidence effectively promotes
 a sense of personal risk because it is less affected by defensive message processing resulting from the threat
 to important self-beliefs that seems inherent in health risk communication.
+
+## Author(s)
+
+John B. F. De Wit, Enny Das, and Raymond Vet
 
 ## Design Type
 
