--- a/_library/174_Madrian_2001.md
+++ b/_library/174_Madrian_2001.md
@@ -1,5 +1,5 @@
 ---
-title: The Power of Suggestion-Inertia in 401(k) Participation and Savings Behavior
+title: The Power of Suggestion -- Inertia in 401(k) Participation and Savings Behavior
 permalink: /madrian-inertia-401k-2001/
 tags: library 
 year: 2001
