--- a/_library/25_GAO_2015.md
+++ b/_library/25_GAO_2015.md
@@ -1,5 +1,5 @@
 ---
-title: Antipsychotic Drug Use-HHS Has Initiatives to Reduce Use among Older Adults in Nursing Homes, but Should Expand Efforts to Other Settings
+title: Antipsychotic Drug Use -- HHS Has Initiatives to Reduce Use among Older Adults in Nursing Homes, but Should Expand Efforts to Other Settings
 permalink: /GAO-Antipsychotics-2015/
 tags: library 
 year: 2015
