--- a/_library/175_Yeager_2011.md
+++ b/_library/175_Yeager_2011.md
@@ -1,5 +1,5 @@
 ---
-title: Social-Psychological Interventions in Education-They’re Not Magic
+title: Social-Psychological Interventions in Education -- They’re Not Magic
 permalink: /yeager-education-2011/
 tags: library 
 year: 2011
