--- a/_library/18_Keller_2011.md
+++ b/_library/18_Keller_2011.md
@@ -1,5 +1,5 @@
 ---
-title: Enhanced Active Choice-A New Method to Motivate Behavior Change 
+title: Enhanced Active Choice -- A New Method to Motivate Behavior Change 
 permalink: /template/
 tags: library 
 year: 2011
