--- a/_library/22_Rogers_2015.md
+++ b/_library/22_Rogers_2015.md
@@ -1,5 +1,5 @@
 ---
-title: Making the Best Laid Plans Better-How Plan-Making Increases Follow-Through
+title: Making the Best Laid Plans Better -- How Plan-Making Increases Follow-Through
 permalink: /rogers-planmaking-2015/
 tags: library 
 year: 2015
