--- a/_library/27_Keife_2001.md
+++ b/_library/27_Keife_2001.md
@@ -1,5 +1,5 @@
 ---
-title: Improving Quality Improvement Using Achievable Benchmarks For Physician Feedback-A Randomized Controlled Trial
+title: Improving Quality Improvement Using Achievable Benchmarks For Physician Feedback -- A Randomized Controlled Trial
 permalink: /Kiefe-quality-improvement-2001/
 tags: library 
 year: 2001
