--- a/_library/31_Karlan_2014.md
+++ b/_library/31_Karlan_2014.md
@@ -1,5 +1,5 @@
 ---
-title: Getting to the Top of Mind-How Reminders Increase Saving
+title: Getting to the Top of Mind -- How Reminders Increase Saving
 permalink: /Karlan-reminders-2014/
 tags: library 
 year: 2014
