--- a/_library/33_Baird_2015.md
+++ b/_library/33_Baird_2015.md
@@ -1,5 +1,5 @@
 ---
-title: REMINDERS TO PAY-Using Behavioral Economics to Increase Child Support Payments
+title: Reminders to Pay -- Using Behavioral Economics to Increase Child Support Payments
 permalink: /baird-reminders-2015/
 tags: library 
 year: 2015
