--- a/_library/6_Allen_2014.md
+++ b/_library/6_Allen_2014.md
@@ -1,5 +1,5 @@
 ---
-title: New Medicaid Enrollees In Oregon Report Health Care Successes And Challenges
+title: New Medicaid Enrollees In Oregon Report Health Care Successes and Challenges
 permalink: /2014-Allen-Medicaid/
 tags: library 
 year: 2014
