--- a/_library/164_Meeker_2016.md
+++ b/_library/164_Meeker_2016.md
@@ -1,6 +1,6 @@
 ---
 title: Effect of Behavioral Interventions on Inappropriate Antibiotic Prescribing among Primary Care Practices -- A Randomized Clinical Trial
-permalink: /template/
+permalink: /meeker-prescribing-2016/
 tags: library 
 year: 2016
 bottlenecks: 
