--- a/_library/18_Keller_2011.md
+++ b/_library/18_Keller_2011.md
@@ -1,6 +1,6 @@
 ---
 title: Enhanced Active Choice -- A New Method to Motivate Behavior Change 
-permalink: /template/
+permalink: /keller-choice-2011/
 tags: library 
 year: 2011
 bottlenecks: 
