--- a/_library/6_Allen_2014.md
+++ b/_library/6_Allen_2014.md
@@ -1,6 +1,6 @@
 ---
 title: New Medicaid Enrollees In Oregon Report Health Care Successes and Challenges
-permalink: /2014-Allen-Medicaid/
+permalink: /Allen-Medicaid-2014/
 tags: library 
 year: 2014
 bottlenecks: 
