--- a/_library/5_Dai_2014.md
+++ b/_library/5_Dai_2014.md
@@ -41,5 +41,9 @@ Data Analysis
 
 ## Source
 
-<a href="https://faculty.wharton.upenn.edu/wp-content/uploads/2014/06/Dai_Fresh_Start_2014_Mgmt_Sci.pdf">The Fresh Start Effect: Temporal Landmarks Motivate
-Aspirational Behavior</a>
+<a href="https://faculty.wharton.upenn.edu/wp-content/uploads/2014/06/Dai_Fresh_Start_2014_Mgmt_Sci.pdf">The Fresh Start Effect: Temporal Landmarks Motivate Aspirational Behavior</a>
+
+## OES Projects that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/roth-tsp-re-enrollment/">Increasing Servicemember Roth TSP Re-Enrollment</a>
+
