--- a/_library/15_Hunt_2011.md
+++ b/_library/15_Hunt_2011.md
@@ -48,4 +48,8 @@ RCT
 
 ## Source
 
-<a href="http://www.sciencedirect.com/science/article/pii/S0047272711000478">Social norms and energy conservation</a>
+<a href="http://www.sciencedirect.com/science/article/pii/S0047272711000478">Social Norms and Energy Conservation</a>
+
+## OES Projects that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/health-insurance-enrollment-2/">Increasing Health Insurance Enrollment Among Uninsured Americans</a>, <a href="https://oes.gsa.gov/projects/mypay-reactivation/">Increasing Military Retiree Reactivation of Online MyPay Accounts</a>
