--- a/_library/10_Chetty_2009.md
+++ b/_library/10_Chetty_2009.md
@@ -51,7 +51,7 @@ RCT
 
 <a href="https://www.bus.umich.edu/otpr/papers/Chetty_Saez.pdf">Teaching the Tax Code:Earnings Responses to an Experiment with EITC Claimants</a>
 
-## OES Projects that Cite this Research
+## OES Project(s) that Cite this Research
 
 <a href="https://oes.gsa.gov/projects/increasing-IDR-applications/">Increasing IDR Applications Among Delinquent Student Borrowers</a>
 
