--- a/_library/6_Allen_2014.md
+++ b/_library/6_Allen_2014.md
@@ -49,7 +49,7 @@ Qualitative
 
 <a href="http://content.healthaffairs.org/content/33/2/292">New Medicaid Enrollees In Oregon Report Health Care Successes And Challenges</a>
 
-## OES Projects that Cite this Research
+## OES Project(s) that Cite this Research
 
 <a href="https://oes.gsa.gov/projects/roth-tsp-re-enrollment/">Increasing Servicemember Roth TSP Re-Enrollment</a>
 
