--- a/_library/15_Hunt_2011.md
+++ b/_library/15_Hunt_2011.md
@@ -50,6 +50,6 @@ RCT
 
 <a href="http://www.sciencedirect.com/science/article/pii/S0047272711000478">Social Norms and Energy Conservation</a>
 
-## OES Projects that Cite this Research
+## OES Project(s) that Cite this Research
 
 <a href="https://oes.gsa.gov/projects/health-insurance-enrollment-2/">Increasing Health Insurance Enrollment Among Uninsured Americans</a>, <a href="https://oes.gsa.gov/projects/mypay-reactivation/">Increasing Military Retiree Reactivation of Online MyPay Accounts</a>
