--- a/_library/18_Keller_2011.md
+++ b/_library/18_Keller_2011.md
@@ -37,3 +37,7 @@ RCT, Qualitative Study
 ## Source
 
 <a href="http://gflec.org/wp-content/uploads/2015/03/Keller-paper-JCPS241.pdf">Enhanced Active Choice: A New Method to Motivate Behavior Change</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/on-base-tsp-enrollment/">Increasing Servicemember On-Base TSP Enrollment</a>, <a href="https://oes.gsa.gov/projects/onesource-subscription/">Increasing Newsletter Subscription Rates of Active Duty Servicemembers</a>
