--- a/_library/22_Rogers_2015.md
+++ b/_library/22_Rogers_2015.md
@@ -44,5 +44,8 @@ Qualitative
 
 ## Source
 
-<a href="http://scholar.harvard.edu/files/todd_rogers/files/making_0.pdf">Making the Best Laid Plans Better: How Plan-Making Increases Follow-Through
-</a>
+<a href="http://scholar.harvard.edu/files/todd_rogers/files/making_0.pdf">Making the Best Laid Plans Better: How Plan-Making Increases Follow-Through</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/securities-account-transfers/">Encouraging Account Transfers by Securities Holders</a>, <a href="https://oes.gsa.gov/projects/tenant-satisfaction-survey-calendar-invite/">Increasing Satisfaction Survey Response Rate from Federal Tenants - Calendar Invite</a>, <a href="https://oes.gsa.gov/projects/tenant-satisfaction-survey-subject-lines/">EIncreasing Satisfaction Survey Response Rate from Federal Tenants - Subject Lines and Day of Week</a>, <a href="https://oes.gsa.gov/projects/tenant-satisfaction-survey-time-of-day/">Increasing Satisfaction Survey Response Rate from Federal Tenants - Time of Day</a>, 
