--- a/_library/23_HHS_2012.md
+++ b/_library/23_HHS_2012.md
@@ -51,3 +51,7 @@ Qualitative
 ## Source
 
 <a href="https://oig.hhs.gov/oei/reports/oei-02-09-00600.pdf">Retail Pharmacies With Questionable Part D Billing</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/reducing-inappropriate-prescribing/">Reducing Inappropriate Prescribing of Schedule II Substances in Medicare Part D</a>
