--- a/_library/24_Olfson_2014.md
+++ b/_library/24_Olfson_2014.md
@@ -69,3 +69,7 @@ Data Analysis
 ## Source
 
 <a href="http://jamanetwork.com/journals/jamapsychiatry/fullarticle/2019955?;resultClick=3">Benzodiazepine Use in the United States</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/reducing-inappropriate-prescribing/">Reducing Inappropriate Prescribing of Schedule II Substances in Medicare Part D</a>
