--- a/_library/25_GAO_2015.md
+++ b/_library/25_GAO_2015.md
@@ -39,3 +39,7 @@ Data Analysis
 ## Source
 
 <a href="https://www.gao.gov/products/GAO-15-211">Antipsychotic Drug Use: HHS Has Initiatives to Reduce Use among Older Adults in Nursing Homes, but Should Expand Efforts to Other Settings</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/reducing-inappropriate-prescribing/">Reducing Inappropriate Prescribing of Schedule II Substances in Medicare Part D</a>
