--- a/_library/27_Keife_2001.md
+++ b/_library/27_Keife_2001.md
@@ -55,3 +55,7 @@ RCT
 ## Source
 
 <a href="http://jamanetwork.com/journals/jama/fullarticle/193913">Improving Quality Improvement Using Achievable Benchmarks For Physician Feedback: A Randomized Control Trial</a>
+
+## OES Project(s) that Cite this Research
+
+<a href="https://oes.gsa.gov/projects/reducing-inappropriate-prescribing/">Reducing Inappropriate Prescribing of Schedule II Substances in Medicare Part D</a>
